Changelog for driftnet
$Id: CHANGES,v 1.3 2001/08/11 13:45:42 chris Exp $

0.1.3

Fixed serious bugs in stream capture code, and tidied up same.

Added command-line options for selecting interfaces, verbosity etc.

Made window resizing neater (it now no longer results in erasing the contents
of the window).

Removed vestigial dependencies upon libpnm.

0.1.2

Various bug fixes.

0.1.1

CHANGES file created. Minor bugfixes (including preventing the program
from quitting when it times out waiting for a packet).